# PrivFedCAE

./: .ignore  README.md  pyproject.toml
PrivFedCae/: CAE.py  SDG.py  __init__.py  benign_power_traces.csv  client.py  malicious_power_traces.csv  server.py  visualisation.py
